created post api of projects
