# src/swagger.json
@@ -2,7 +2,7 @@
   "openapi": "3.0.0",
   "info": {
     "version": "1.0.0",
-    "title": "App API",
+    "title": "Real-Estate API",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b>."
   },
   "servers": [
@@ -625,6 +625,127 @@
                     "type": "string",
                     "minLength": 1,
                     "example": "Tam"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/projects/": {
+      "post": {
+        "tags": [
+          "Projects"
+        ],
+        "description": "Create a new project",
+        "parameters": [],
+        "responses": {
+          "201": {
+            "description": "Successful"
+          },
+          "400": {
+            "description": "Invalid Request"
+          },
+          "401": {
+            "description": "Unauthenticated"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "required": [
+                  "projectName",
+                  "types",
+                  "status",
+                  "orientation",
+                  "architect",
+                  "address",
+                  "landSize",
+                  "numberUnits",
+                  "apartmentSize",
+                  "numberFloors",
+                  "numberParkings",
+                  "handOverDate"
+                ],
+                "properties": {
+                  "projectName": {
+                    "type": "string",
+                    "minLength": 10,
+                    "example": "JCX PARK"
+                  },
+                  "address": {
+                    "type": "string",
+                    "minLength": 100,
+                    "example": "Dhanmondi, Dhaka"
+                  },
+                  "architect": {
+                    "type": "string",
+                    "minLength": 40,
+                    "example": "AR Rahman"
+                  },
+                  "numberFloors": {
+                    "type": "integer",
+                    "minLength": 20,
+                    "example": 10
+                  },
+                  "numberParkings": {
+                    "type": "integer",
+                    "minLength": 20,
+                    "example": 10
+                  },
+                  "numberUnits": {
+                    "type": "integer",
+                    "minLength": 10,
+                    "example": 3
+                  },
+                  "landSize": {
+                    "type": "string",
+                    "minLength": 10,
+                    "example": "100 sq/ft"
+                  },
+                  "apartmentSize": {
+                    "type": "string",
+                    "minLength": 10,
+                    "example": "100 sq/ft"
+                  },
+                  "types": {
+                    "type": "array",
+                    "example": [
+                      "construction",
+                      "residential"
+                    ]
+                  },
+                  "status": {
+                    "type": "array",
+                    "example": [
+                      "ongoing",
+                      "upcoming",
+                      "completed"
+                    ]
+                  },
+                  "orientation": {
+                    "type": "array",
+                    "example": [
+                      "ongoing",
+                      "upcoming",
+                      "completed"
+                    ]
+                  },
+                  "handOverDate": {
+                    "type": "string",
+                    "pattern": "YYYY-MM-DD",
+                    "example": "2023-01-19"
                   }
                 }
               }
